[gd_scene load_steps=3 format=3 uid="uid://ormgbvgat7ix"]

[ext_resource type="Script" path="res://scene/menus/settings.gd" id="1_xrsgm"]
[ext_resource type="PackedScene" uid="uid://smav7ilugg5n" path="res://scene/shaders/blur.tscn" id="2_807t0"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xrsgm")

[node name="Blur" parent="." instance=ExtResource("2_807t0")]
layout_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -621.0
offset_top = -312.5
offset_right = 621.0
offset_bottom = 312.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 0.588235)

[node name="SettingsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.5
offset_top = 173.0
offset_right = 62.5
offset_bottom = 221.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -324.0
offset_right = 156.0
offset_bottom = -282.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="RestoreDefaultButton" type="Button" parent="BottomButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "RESTORE DEFAULT"

[node name="BackButton" type="Button" parent="BottomButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "BACK"

[node name="MusicAndDisplayGroup" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 428.0
offset_top = 337.0
offset_right = 908.0
offset_bottom = 659.0
theme_override_constants/h_separation = 60
theme_override_constants/v_separation = 20
columns = 2

[node name="MasterVolLabel" type="Label" parent="MusicAndDisplayGroup"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "Master Vol."

[node name="MasterSoundSlider" type="HSlider" parent="MusicAndDisplayGroup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.5

[node name="BGMLabel" type="Label" parent="MusicAndDisplayGroup"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MusicAndDisplayGroup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.5

[node name="SELabel" type="Label" parent="MusicAndDisplayGroup"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "Sound Effects"

[node name="SESlider" type="HSlider" parent="MusicAndDisplayGroup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.5

[node name="SELabel2" type="Label" parent="MusicAndDisplayGroup"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "Ambience"

[node name="AmbienceSlider" type="HSlider" parent="MusicAndDisplayGroup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.5

[node name="TextSpeedLabel" type="Label" parent="MusicAndDisplayGroup"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Text Speed"

[node name="TextSpeedSlider" type="HSlider" parent="MusicAndDisplayGroup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.5
max_value = 5.0
step = 0.1
value = 1.0

[node name="AutoSpeedLabel" type="Label" parent="MusicAndDisplayGroup"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Auto Speed"

[node name="AutoSpeedSlider" type="HSlider" parent="MusicAndDisplayGroup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.5
max_value = 5.0
step = 0.1
value = 1.0

[node name="DisplayGroup" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 997.0
offset_top = 337.0
offset_right = 1483.0
offset_bottom = 488.0
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 20
columns = 2

[node name="WindowLabel" type="Label" parent="DisplayGroup"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "Fullscreen?"

[node name="WindowOption" type="CheckButton" parent="DisplayGroup"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ResLabel" type="Label" parent="DisplayGroup"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "Screen Resolution"

[node name="ResOptions" type="OptionButton" parent="DisplayGroup"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
alignment = 1
item_count = 3
selected = 1
popup/item_0/text = "1280x720"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1920x1800"
popup/item_2/id = 2

[node name="VSyncLabel" type="Label" parent="DisplayGroup"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "VSync"

[node name="VSync" type="CheckButton" parent="DisplayGroup"]
layout_mode = 2
size_flags_horizontal = 0

[node name="TextAccGroup" type="GridContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 272.0
offset_top = 512.0
offset_right = 752.0
offset_bottom = 606.0
theme_override_constants/h_separation = 84
theme_override_constants/v_separation = 20
columns = 2

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="BottomButtons/RestoreDefaultButton" to="." method="_on_restore_default_button_pressed"]
[connection signal="pressed" from="BottomButtons/BackButton" to="." method="_on_backbutton_pressed"]
[connection signal="value_changed" from="MusicAndDisplayGroup/MasterSoundSlider" to="." method="_on_master_sound_slider_value_changed"]
[connection signal="value_changed" from="MusicAndDisplayGroup/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MusicAndDisplayGroup/SESlider" to="." method="_on_se_slider_value_changed"]
[connection signal="value_changed" from="MusicAndDisplayGroup/AmbienceSlider" to="." method="_on_ambience_slider_value_changed"]
[connection signal="value_changed" from="MusicAndDisplayGroup/TextSpeedSlider" to="." method="_on_text_speed_slider_value_changed"]
[connection signal="value_changed" from="MusicAndDisplayGroup/AutoSpeedSlider" to="." method="_on_auto_speed_slider_value_changed"]
[connection signal="toggled" from="DisplayGroup/WindowOption" to="." method="_on_window_option_toggled"]
[connection signal="item_selected" from="DisplayGroup/ResOptions" to="." method="_on_res_options_item_selected"]
[connection signal="toggled" from="DisplayGroup/VSync" to="." method="_on_vsync_button_toggled"]
